Alpha 0.17 Menu on mobile/tablet links fixed

--- a/assets/main3.css
+++ b/assets/main3.css
@@ -20,7 +20,7 @@ body{
 /*Container for the header*/
 .header{
     width: 100%;
-    height: 7vh;
+    height: calc(3vh + 2vw);
     background-color: #424242;
     box-shadow: 10px 10px 24px -12px rgba(0,0,0,0.75);
     transition: 0.3s;
@@ -43,10 +43,6 @@ body{
     padding: 1.5vh;
 }
 
-.headeroptions li:hover{
-    background-color: #696969;
-}
-
 .headerimagediv{
     margin-left: 15px;
     flex: 1;
@@ -56,8 +52,8 @@ body{
     align-items: center;
 }
 #headerlogo{
-    height: 5vh;
-    width: 13vh;
+    height: calc(1.7vh + 2vw);
+    width: calc(7vh + 4vw);
 }
 
 .header ul{
@@ -88,10 +84,10 @@ body{
 #menuimg{
     display: none;
     position: absolute;
-    height: 4vh;
-    width: 4vh;
-    top: 1.5vh;
-    right: 1.5vh;
+    height: calc(2vh + 1vw);
+    width: calc(2vh + 1vw);
+    top: calc(0.5vh + 0.5vw);
+    right: calc(0.5vh + 0.5vw);
 }
 
 /**/
@@ -296,9 +292,12 @@ body{
     column-count: 3;
 }
 
-@media (min-width: 1101px){
+@media (min-width: 901px){
     .headeroptions{
         display: flex;
+    }
+    .headeroptions li:hover{
+        background-color: #696969;
     }
 }
 
@@ -329,18 +328,27 @@ body{
     }
     .headeroptions{
         position: absolute;
-        top: 7vh;
+        top: calc(3vh + 2vw);
         left: 0;
         display: none;
         flex-direction: column;
         align-items: center;
         align-content: center;
         width: 100%;
-        background-color: #424242;
+        background-color: #505050;
         transition: 0.5s;
+    }
+    .headeroptions li{
+        width: 100%;
+        text-align: center;
+
     }
     .headeroptions li a{
         font-size: 3vh;
+        display: block;
+    }
+    .headeroptions li:active  .headeroptions{
+        background-color: red;
     }
     #menuimg{
         display: block;
